# branch-splitter

./: conftest.py  pyproject.toml
.github/workflows/: release-check.yml  release.yml
branch_splitter/: branch_manager.py  change_manager.py  git_repo.py  main.py  main_controller.py  user_interface.py
tests/: test_branch_manager.py  test_git_repo.py  test_main_controller.py  test_user_interface.py
